Fixed event box details and spacing

--- a/signup.css
+++ b/signup.css
@@ -1,5 +1,9 @@
 /*Sign up page styling*/
 
+.eventDetails {
+    padding-left: 2.5%
+}
+
 table, th, td {
     border: 1px solid black;
     /*border-collapse: collapse;*/
